log
Thu 11 May 2023 09:39:35 PM UTC: 
 tests:  0|4
total_score: 0/70
1ddba3e
Thu 11 May 2023 11:42:59 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3e37a39
Fri 12 May 2023 02:51:36 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4f0078
Fri 12 May 2023 02:53:21 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e1bfe84
Fri 12 May 2023 02:55:29 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:22: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   if(pq->heapArray[0]->data==NULL) return NULL;
      |                      ^~
Compilation failed
b850729
Fri 12 May 2023 02:58:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   if(!pq->heapArray[0]->data) return NULL;
      |                       ^~
Compilation failed
32cbadc
Fri 12 May 2023 02:59:27 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:22: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   if(pq->heapArray[0]->data) return NULL;
      |                      ^~
Compilation failed
0a4c08f
Fri 12 May 2023 03:01:51 AM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:3: error: unknown type name ‘heappElem’; did you mean ‘heapElem’?
   21 |   heappElem* paquete = pq->heapArray[0];
      |   ^~~~~~~~~
      |   heapElem
heap.c:21:24: error: incompatible types when initializing type ‘int *’ using type ‘heapElem’ {aka ‘struct nodo’}
   21 |   heappElem* paquete = pq->heapArray[0];
      |                        ^~
heap.c:22:13: error: request for member ‘data’ in something not a structure or union
   22 |   if(paquete->data==NULL) return NULL;
      |             ^~
heap.c:23:17: error: request for member ‘data’ in something not a structure or union
   23 |   return paquete->data;
      |                 ^~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6e39777
